# rosclaw-example-booster-k1

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  dds-profile.xml  setup-dds-env.sh  tf2_ros.py
config/: rosclaw-plugin.local.json
docker/: entrypoint-k1.sh  start-k1-teleop.sh
example/booster-k1-rosclaw-frontend/booster-k1-rosclaw-frontend/: AppModel.swift  ContentView.swift  ImmersiveView.swift  Info.plist  ToggleImmersiveSpaceButton.swift  booster_k1_rosclaw_frontendApp.swift
example/booster-k1-rosclaw-frontend/booster-k1-rosclaw-frontend.xcodeproj/: project.pbxproj
example/booster-k1-rosclaw-frontend/booster-k1-rosclaw-frontendTests/: AlignmentTests.swift  booster_k1_rosclaw_frontendTests.swift
isaac-sim-runtime/: README.md
isaac-sim-runtime/scripts/: k1_demo.py  launch_k1_isaacsim_rosclaw.sh
overrides/: control.py  motion_replay.py  velocity_env.py
patches/: booster-k1-rl-runtime-overrides.patch  rosclaw-plugin-k1-openclaw.patch  rosclaw-ros2-k1-bringup.patch
real-hardware/: DDS_HOST_MATCH_REPORT.md  bringup_openclaw_k1.sh  fix_k1_fastdds_udp_only.sh  rpc_service_smoke_test.py
real-hardware/src/: CODEX.md
real-hardware/src/k1_cmd_vel_bridge/: package.xml  setup.cfg  setup.py
real-hardware/src/k1_cmd_vel_bridge/config/k1/: discovery.yaml  nav2_params.yaml  perception.yaml  safety_policy.yaml  slam_toolbox.yaml
real-hardware/src/k1_cmd_vel_bridge/k1_cmd_vel_bridge/: __init__.py  cmd_vel_bridge.py
real-hardware/src/k1_cmd_vel_bridge/launch/: k1_cmd_vel_bridge.launch.py  k1_host_navigation.launch.py  k1_openclaw_bringup.launch.py
real-hardware/src/k1_cmd_vel_bridge/resource/: k1_cmd_vel_bridge
real-hardware/src/k1_low_level_relay/: package.xml  setup.cfg  setup.py
real-hardware/src/k1_low_level_relay/k1_low_level_relay/: __init__.py  depth_reencode_node.py  odometer_bridge_node.py  relay_node.py  stereo_stream_client_node.py  stereo_stream_common.py  stereo_stream_server_node.py  telemetry_stream_client_node.py  telemetry_stream_common.py  telemetry_stream_server_node.py
real-hardware/src/k1_low_level_relay/launch/: k1_low_level_relay.launch.py
real-hardware/src/k1_low_level_relay/resource/: k1_low_level_relay
real-hardware/src/k1_openclaw_mission_bridge/: package.xml  setup.cfg  setup.py
real-hardware/src/k1_openclaw_mission_bridge/k1_openclaw_mission_bridge/: __init__.py  openclaw_client.py  server.py
real-hardware/src/k1_openclaw_mission_bridge/launch/: k1_visionos_backend.launch.py
real-hardware/src/k1_openclaw_mission_bridge/resource/: k1_openclaw_mission_bridge
real-hardware/src/k1_visionos_rtabmap_bridge/: package.xml  setup.cfg  setup.py
real-hardware/src/k1_visionos_rtabmap_bridge/k1_visionos_rtabmap_bridge/: __init__.py  mapping_bridge.py
real-hardware/src/k1_visionos_rtabmap_bridge/launch/: k1_visionos_rtabmap_bridge.launch.py
real-hardware/src/k1_visionos_rtabmap_bridge/resource/: k1_visionos_rtabmap_bridge
scripts/: common.sh  probe_stability.sh  setup_external_environment.sh  smoke_cmd_vel.sh  smoke_livestream.sh  smoke_manifest.sh  smoke_motion.sh  smoke_ready.sh  smoke_rosbridge.sh  smoke_topics.sh
simulators/isaac-sim/: README.md  booster_asset_override.py  k1_warehouse_demo_override.py
simulators/isaac-sim/docker/: entrypoint-k1.sh
simulators/isaac-sim/scripts/: configure_openclaw_k1.sh  run_k1_isaac_sim.sh  stop_k1_isaac_sim.sh  unconfigure_openclaw_k1.sh
(+4 files in other folders)
