<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>k1_cmd_vel_bridge</name>
  <version>0.1.0</version>
  <description>Bridge ROS 2 Twist commands to Booster K1 locomotion RPC calls.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>booster_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>k1_low_level_relay</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosclaw_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
